# RedSploit

./: .gitignore  AGENTS.md  README.md  SETUP.md  chat.md  config.yaml  guide.md  index.html  install.sh  pyproject.toml  red.py  red.sh  requirements.txt  setup.sh  setup_completion.sh  task.md  ux-before-after.html
.kiro/specs/tui-redesign/: design.md  (+4 more)
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-10.jsonl  turns-2026-04-10.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
completions/: README.md  _red  red.bash
redsploit/: __init__.py  cli.py
redsploit/core/: base_shell.py  colors.py  history.py  loot.py  playbook.py  rich_output.py  rich_theme.py  security_headers.py  session.py  shell.py  summary.py  utils.py
redsploit/modules/: ad.py  base.py  file.py  infra.py  system.py  web.py  workflow.py
redsploit/workflow/: __init__.py  builder.py  collapsible_output.py  config.py  display_theme.py  execution.py  live_step_view.py  manager.py  planner.py  progress_reporter.py  step_display.py  step_display_state.py  store.py  workflow_display.py
scratch/: test_live.py
tests/: conftest.py  test_ad_module.py  test_file_module.py  test_help_commands.py  test_infra_module.py  test_install_script.py  test_loot.py  test_red_cli_routing.py  test_session.py  test_shell_smart_features.py  test_summary_service.py  test_utils.py  test_web_module.py  test_workflow_builder.py  test_workflow_execution.py  test_workflow_progress_reporting.py  test_workflow_reporting.py  test_workflow_store.py
workflows/: external-continuous.yaml  external-project.yaml  internal-project.yaml  test-tui.yaml
(+52 files in other folders)
