[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redsploit"
version = "2.1.0"
description = "Red Team penetration testing CLI tool with interactive shell and automation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thongheng", email = "thonghengheu@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
dependencies = [
    "PyYAML>=6.0",
    "pydantic>=2.9,<3.0",
    "prompt-toolkit>=3.0.0",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-asyncio>=1.0",
]

[project.scripts]
red = "redsploit.cli:main"

[project.urls]
Homepage = "https://github.com/Thongheng/RedSploit"
Repository = "https://github.com/Thongheng/RedSploit.git"
Issues = "https://github.com/Thongheng/RedSploit/issues"

[tool.setuptools.packages.find]
include = ["redsploit*"]

[tool.setuptools.package-data]
redsploit = ["*.yaml"]
